<resources>
    <string name="already_have_acct">Already have an account?</string>
    <string name="app_name">NotesApp</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_not_match">Confirm Password must match password</string>
    <string name="delete_account">Delete Account</string>
    <string name="don_have_acct">Don\'t have an account?</string>
    <string name="edit">Edit</string>
    <string name="email_address">Email Address</string>
    <string name="email_blank">Email cannot be blank</string>
    <string name="email_short">Email is too short</string>
    <string name="email_template">Email: <b>%1s</b></string>
    <string name="enter_a_valid_email">Enter a valid email address</string>
    <string name="enter_email_below">Enter your email address below to reset your account password</string>
    <string name="enter_text_here">Enter text here …</string>
    <string name="first_name">First Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="hello_user">Hello %1s</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed!</string>
    <string name="login_success">Login Successful!</string>
    <string name="name_template">Name: <b>%1s</b></string>
    <string name="new_note">New Note</string>
    <string name="no_internet">No internet connection!</string>
    <string name="note_delete_fail">Note deletion failed, Please try again!!</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_saved">Note saved successfully</string>
    <string name="password">Password</string>
    <string name="password_blank">Password cannot be blank</string>
    <string name="password_changed_login">Password changed successfully. Please login again</string>
    <string name="password_invalid">Password must have at least 6 characters</string>
    <string name="password_reset_email_sent">An email to reset your password has been sent to your email</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset password</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="update">Update</string>
    <string name="new_password">New Password</string>
</resources>